apps/baikal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baikal
  namespace: default
  labels:
    app: baikal
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: baikal
  template:
    metadata:
      labels:
        app: baikal
    spec:
      containers:
      - name: baikal
        image: ckulka/baikal:0.9.3-nginx-php8.0
        volumeMounts:
        - mountPath: /var/www/baikal/Specific
          name: data1
        - mountPath: /var/www/baikal/config
          name: data2
        ports:
        - containerPort: 80
          name: http
      volumes:
      - name: data2
        persistentVolumeClaim:
          claimName: baikal2-pvc
      - name: data1
        persistentVolumeClaim:
          claimName: baikal1-pvc
