apps/baikal/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: baikal
spec:
  selector:
    app: baikal
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
